add kafka management