@@ -11,12 +11,12 @@ import org.apache.kafka.streams.KeyValue;
 import org.apache.kafka.streams.StreamsBuilder;
 import org.apache.kafka.streams.Topology;
 import org.apache.kafka.streams.kstream.Consumed;
+import org.apache.kafka.streams.kstream.Produced;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.kafka.config.KafkaStreamsConfiguration;
 import org.springframework.stereotype.Component;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -31,19 +31,18 @@ public class UserKafkaStreams {
     @Bean
     public Topology build(KafkaStreamsConfiguration kafkaStreamsConfiguration, StreamsBuilder streamsBuilder, KafkaStreamsExceptionHandler handler,
                           UserService userService, @Qualifier("keycloakEventServiceV1") AuthServerEventService authServerEventService) {
+
         streamsBuilder.stream(authServerEventsTopic, Consumed.with(Serdes.String(),Serdes.String()))
                 .peek((key,event)-> log.info("Consuming events from topic {} : {} ",authServerEventsTopic, event))
-                .flatMap((key, event) -> authServerEventService.eventToUser(event).entrySet().stream()
-                        .map(entry -> new KeyValue<>(entry.getKey(), entry.getValue()))
-                        .collect(Collectors.toList()))
-                .peek((userEvent,user)->{
-                    switch (userEvent){
-                        case CREATE -> userService.save(user);
-                        case DELETE -> userService.delete(user);
-                        case UPDATE -> userService.update(user);
-                    }
-                })
-                .to(userEventsTopic);
+                .mapValues((key, event) -> authServerEventService.eventToUser(event))
+                .flatMapValues((key, mapEvent) ->
+                        mapEvent.entrySet().stream()
+                                .map(entry -> userService.handleUserEvent(entry.getKey(), entry.getValue()))
+                                .toList()
+                )
+                .map((key, user) -> new KeyValue<>(user.getId(), user.toString()))
+                .to(userEventsTopic, Produced.with(Serdes.Long(), Serdes.String()));
+
         var topology = streamsBuilder.build();
         var kafkaStreams = new KafkaStreams(topology, kafkaStreamsConfiguration.asProperties());
         kafkaStreams.setUncaughtExceptionHandler(handler::handleUncaught);
